<resources>
    <string name="app_name">Zamazon</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_cart">Cart</string>
    <string name="menu_order">Search</string>
    <string name="menu_category">Danh mục</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_products">Home</string>


</resources>