<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.zamazon.ui.productsall.ProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_products_all" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.zamazon.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/activity_cart" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.zamazon.ui.orders.OrdersFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.zamazon.ui.slideshow.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.zamazon.ui.settings.SettingsFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.zamazon.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>